syntax = "proto3";

message ObjectAlias {
    message IMember {
        optional string id = 1;
        string email = 2;
        string name = 3;
        oneof sex {
            uint32 sex_o0 = 4;
            string sex_o1 = 5;
        }
        optional double age = 6;
        optional bool dead = 7;
    }
}

message __Main {
    repeated ObjectAlias.IMember value = 1;
}